--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 <p>
- <img src="./arquivos/Frame 4.svg" alt="demonstração do projeto" width="100%" />
+ <img src="./arquivos/Frame 4.jpg" alt="demonstração do projeto" width="100%" />
 </p>
 
 ## 🖥️ Projeto
